SET(FIBER_CORE_SOURCES
  Core/Fiber.cc
  Core/Handle.cc
)

SET(FIBER_FFS_SOURCES
  ExeCtrl/Go.cc
  ExeCtrl/Yield.cc
  ExeCtrl/SleepFor.cc
)


ADD_LIBRARY(Fiber STATIC
  ${FIBER_CORE_SOURCES}
  ${FIBER_FFS_SOURCES}
)


TARGET_INCLUDE_DIRECTORIES(Fiber PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/Core>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/ExeCtrl>
  $<INSTALL_INTERFACE:include/Fiber>
)


TARGET_LINK_LIBRARIES(Fiber PUBLIC
  third_party_vvv
  Coroutine
  Scheduling
)
