ADD_SUBDIRECTORY(Core)
ADD_SUBDIRECTORY(Timerrrs)
ADD_SUBDIRECTORY(Executors)
ADD_SUBDIRECTORY(RunLoop)
ADD_SUBDIRECTORY(SandBox)
ADD_SUBDIRECTORY(MultiThread)


ADD_LIBRARY(Infra INTERFACE)

TARGET_LINK_LIBRARIES(Infra INTERFACE
  RtCore
  RtTimers
  RtExe
  RtRunLoop
  RtSandBox
  RtMultiThread
)
